# racedata

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
racedata/: __init__.py  resolve.py
racedata/core/: comparison.py  models.py  protocol.py  split_filter.py  timing.py
racedata/lifetime/: __init__.py  h2h.py  models.py  protocol.py
racedata/providers/: factory.py
racedata/providers/rtrt/: client.py  events.py  points.py  service.py  ulink.py
racedata/providers/sportstats/: __init__.py  client.py  link.py  service.py
racedata/providers/usat/: client.py  parse.py  service.py
tests/: test_comparison.py  test_event_display_name.py  test_lifetime_h2h.py  test_provider_factory.py  test_resolve_share_url.py  test_rtrt_events.py  test_rtrt_service.py  test_split_filter.py  test_sportstats_client.py  test_sportstats_link.py  test_sportstats_service.py  test_timing.py  test_ulink.py  test_usat_client.py  test_usat_parse.py
tests/fixtures/: multisport_conf.json  multisport_splits.json  sportstats_leaderboard.html  sportstats_search.json  sportstats_single.json  ulink_multisport.html  ulink_usata.html  ulink_venice.html  usat_athlete_182151_results_p1.html  usat_athlete_182151_results_p2.html  usat_olympic_conf.json  usat_olympic_splits.json  usat_search_navratil.html  venice703_conf.json  venice703_splits.json
