[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "racedata"
version = "0.1.0"
description = "Provider-agnostic race timing data library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["racedata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call live RTRT APIs",
]
